/booking - Quick date alignment fix
Just a font-size decrease. Better template change pending!

--- a/booking/www/css/booking.css
+++ b/booking/www/css/booking.css
@@ -298,14 +298,14 @@ label {
 }
 
 .yesterdayArrow {
-    font-size: 18px;
+    font-size: 16px;
     height: 41px;
     line-height: 41px;
     vertical-align: text-bottom;
 }
 
 .tomorrowArrow {
-    font-size: 18px;
+    font-size: 16px;
     height: 41px;
     line-height: 41px;
     vertical-align: text-bottom;
